# MaskOS

./: .gitignore  Cargo.toml  README.md  create_image.sh
assets/: entities.json  startup.nsh  test.txt
assets/entities/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  A.json  B.json  C.json  D.json  E.json  F.json  G.json  H.json  I.json  J.json  K.json  L.json  M.json  N.json  O.json  P.json  R.json  S.json  T.json  U.json  V.json  W.json  X.json  Y.json  Z.json
assets/levels/: 0.lvl  0.lvl.items  1.lvl  1.lvl.items  2.lvl  3.lvl  3.lvl.items
src/: file_loader.rs  graphics.rs  main.rs
src/math/: mod.rs  vec2.rs  vec4.rs
